tweets page has benn changed to show the list only tweets has been rendered

--- a/static/styles/circle.css
+++ b/static/styles/circle.css
@@ -171,3 +171,11 @@ body {
 .jumbotron {
   padding: 10px !important;
 }
+
+.twitter-visibility-hidden {
+  visibility: hidden;
+}
+
+.twitter-visibility-visible {
+  visibility: visible;
+}
